fix the bug of create

--- a/public/locales/en-us.json
+++ b/public/locales/en-us.json
@@ -73,7 +73,7 @@
   "FillDescription": "Please fill description",
   "FillOption": "Please fill the option",
   "AddOption": "Add Option",
-  "Create": "Add Create",
+  "Create": "Create",
   "CreateNewVote": "Create a new vote",
   "Decide": "Decide",
   "sureTrigger": "Are you sure trigger?",
