add trasfer to dao

--- a/public/locales/en-us.json
+++ b/public/locales/en-us.json
@@ -26,6 +26,7 @@
   "Voting": "Voting",
   "Vault": "Vault",
   "Org": "Org",
+  "More": "More",
   "Back": "Back",
   "Manage": "Manage",
   "Members": "Members",
@@ -37,6 +38,7 @@
   "AddMember": "Add a DAO Member",
   "History": "History",
   "Amount": "Amount",
+  "transferBtn": "transfer",
   "Transfer": "Transfer from",
   "InitializeVault": "Initialize the vault page",
   "sentfrom": "were successfully sent from",
