--- a/public/locales/zh-cn.json
+++ b/public/locales/zh-cn.json
@@ -26,6 +26,7 @@
   "Voting": "投票",
   "Vault": "金库",
   "Org": "组织",
+  "More": "更多",
   "Back": "返回",
   "Manage": "管理",
   "Members": "成员",
@@ -37,6 +38,7 @@
   "AddMember": "增加成员",
   "History": "历史记录",
   "Amount": "数量",
+  "transferBtn": "转移",
   "Transfer": "转自",
   "InitializeVault": "初始化金库页面",
   "sentfrom": "成功转账自",
