--- a/public/locales/en-us.json
+++ b/public/locales/en-us.json
@@ -79,6 +79,7 @@
   "CreateNewVote": "Create a new vote",
   "Decide": "Decide",
   "sureTrigger": "Are you sure trigger?",
+  "exitOrg": "Are you sure exit Org?",
   "Close": "Close",
   "Confirm": "Confirm",
   "Basicinformation": "Basic information",
