--- a/public/locales/zh-cn.json
+++ b/public/locales/zh-cn.json
@@ -79,6 +79,7 @@
   "CreateNewVote": "新建投票",
   "Decide": "决定",
   "sureTrigger": "是否确定触发？",
+  "exitOrg": "是否确定退出org？",
   "Close": "关闭",
   "Confirm": "确定",
   "Basicinformation": "基础信息",
