fix bug of vote

--- a/public/locales/en-us.json
+++ b/public/locales/en-us.json
@@ -5,6 +5,7 @@
   "YourAccount": "Your Account",
   "SelectAccount": "Please Select Your Account",
   "SelectOption": "Please Select Option",
+  "noWallet": "Please install Polkadot wallet first",
   "CreateDAO": "Create My DAO",
   "connect": "Please connect wallet",
   "noDao": "You are not a member of any DAO",
@@ -51,7 +52,7 @@
   "Request": "Request",
   "Createwithdraw": "Create a new withdraw",
   "fillAddress": "Please fill your receiver's address",
-  "InitializeVote": "Initialize the vault page",
+  "InitializeVote": "Initialize the vote page",
   "Newvoting": "New voting",
   "PendingVoting": "Pending Voting List",
   "ActiveVoting": "Active Voting List",
