add auth in org

--- a/public/locales/en-us.json
+++ b/public/locales/en-us.json
@@ -17,6 +17,7 @@
   "InitializeHome": "Initialize home page",
   "InitializeDAO": "Initializing DAO Contracts",
   "GetContractAddress": "Get Contract Address",
+  "apply": "Apply",
   "InitializingContracts": "Initializing Contracts",
   "Getbalance": "Get balance Of tokens",
   "Getinformation": "Get information",
@@ -30,13 +31,19 @@
   "More": "More",
   "Back": "Back",
   "Manage": "Manage",
+  "applyList": "Apply List",
+  "ExitDAO": "Exit the DAO",
   "Members": "Members",
   "Add": "Add",
   "InitializeORG": "Initialize the ORG page",
+  "setFreeAddMember": "Set the way to add members",
   "RemoveModerator": "Remove a DAO moderator",
   "RemoveMember": "Remove a DAO member",
   "AddModerator": "Add a DAO Moderator",
   "AddMember": "Add a DAO Member",
+  "ApplyMember": "Apply a DAO Member",
+  "ApplicationSent": "Application request sent",
+  "ApproveSent": "Approvement sent",
   "History": "History",
   "Amount": "Amount",
   "transferBtn": "transfer",
@@ -47,6 +54,7 @@
   "deposit": "Deposit",
   "withdraw": "Withdraw",
   "Createdeposit": "Create a new deposit",
+  "transferOrg": "transfer Org",
   "send": "send",
   "fillAmount": "Please fill your amount",
   "Request": "Request",
