--- a/public/locales/zh-cn.json
+++ b/public/locales/zh-cn.json
@@ -17,6 +17,7 @@
   "InitializeHome": "初始化首页",
   "InitializeDAO": "初始化DAO合约",
   "GetContractAddress": "获取合约地址",
+  "apply": "申请",
   "InitializingContracts": "初始化合约",
   "Getbalance": "获取代币余额",
   "Getinformation": "获取信息",
@@ -30,13 +31,19 @@
   "More": "更多",
   "Back": "返回",
   "Manage": "管理",
+  "applyList": "申请列表",
+  "ExitDAO": "退出当前DAO",
   "Members": "成员",
   "Add": "增加",
   "InitializeORG": "初始化组织页面",
+  "setFreeAddMember": "设置添加成员方式",
   "RemoveModerator": "删除管理员",
   "RemoveMember": "删除成员",
   "AddModerator": "增加管理员",
   "AddMember": "增加成员",
+  "ApplyMember": "申请成员",
+  "ApplicationSent": "申请已发送",
+  "ApproveSent": "通过已发送",
   "History": "历史记录",
   "Amount": "数量",
   "transferBtn": "转移",
@@ -47,6 +54,7 @@
   "deposit": "存款",
   "withdraw": "提现",
   "Createdeposit": "新建存款",
+  "transferOrg": "转移ORG",
   "send": "发送",
   "fillAmount": "请填写数量",
   "Request": "申请",
