add 'batch add members'

--- a/public/locales/en-us.json
+++ b/public/locales/en-us.json
@@ -36,11 +36,12 @@
   "Members": "Members",
   "Add": "Add",
   "InitializeORG": "Initialize the ORG page",
+  "triggerStatus": "Join the org directly？",
   "setFreeAddMember": "Set the way to add members",
   "RemoveModerator": "Remove a DAO moderator",
   "RemoveMember": "Remove a DAO member",
   "AddModerator": "Add a DAO Moderator",
-  "AddMember": "Add a DAO Member",
+  "AddMember": "Add DAO Member(s)",
   "ApplyMember": "Apply a DAO Member",
   "ApplicationSent": "Application request sent",
   "ApproveSent": "Approvement sent",
