add auth list & fix bug of vote time

--- a/public/locales/en-us.json
+++ b/public/locales/en-us.json
@@ -123,5 +123,6 @@
   "TransferTokens": "Transfer Tokens",
   "AddDaoModerators": "Add Dao Moderators",
   "ReceiverAddress": "Receiver's address",
-  "UpdateAuthority": "Update Authority"
+  "UpdateAuthority": "Update Authority",
+  "triggering": "Trigger transfer token"
 }
