fix bug of vote number &   result.status.isInBlock

--- a/public/locales/en-us.json
+++ b/public/locales/en-us.json
@@ -69,9 +69,9 @@
   "Title": "Title",
   "Trigger": "Trigger",
   "View": "View",
-  "VotingNumber": "Voting Number",
-  "supportnumber": "support require number",
-  "minnumber": "min require number",
+  "VotingNumber": "Voting Id",
+  "supportnumber": "Support require number",
+  "minnumber": "Min require number",
   "VotingDescription": "Voting Description",
   "Votingtime": "Voting time",
   "Votingdurate": "Please fill how long the vote durate by seconds",
