fix style to header & create & home

--- a/public/locales/en-us.json
+++ b/public/locales/en-us.json
@@ -3,16 +3,18 @@
   "homeDescription":"DAOWallet will soon be launched on Chrome Web Store. It will gradually support most types of cryptocurrencies through the Polkadot cross-chain infrastructure.",
   "ConnectWallet": "Connect Wallet",
   "YourAccount": "Your Account",
-  "SelectAccount": "Please Select Your Account",
+  "SelectAccount": "Select Account",
   "SelectOption": "Please Select Option",
   "noWallet": "Please install Polkadot wallet first",
-  "CreateDAO": "Create My DAO",
+  "CreateDAO": "Create A DAO",
   "connect": "Please connect wallet",
   "noDao": "You are not a member of any DAO",
   "canCreateDao": "You can create your DAO!",
   "right": "SubDAO Labs © 2021 All Rights Reserved",
   "Website": "Website",
   "Exit": "Exit",
+  "ExitMy": "Exit my DAO",
+  "ExitCreate": "Exit create",
   "MyDAO": "My DAO",
   "InitializeHome": "Initialize home page",
   "InitializeDAO": "Initializing DAO Contracts",
@@ -47,7 +49,8 @@
   "ApproveSent": "Approvement sent",
   "History": "History",
   "Amount": "Amount",
-  "transferBtn": "transfer",
+  "transferBtn": "Transfer",
+  "transferOwnership": "Transfer Ownership",
   "Transfer": "Transfer from",
   "InitializeVault": "Initialize the vault page",
   "sentfrom": "were successfully sent from",
@@ -96,7 +99,7 @@
   "TemplateSelection": "Template selection",
   "TemplateConfiguration": "Template configuration",
   "think": "Let me think~",
-  "DAOImage": "DAO Image",
+  "DAOImage": "DAO Logo",
   "DAOName": "DAO name",
   "DAODescription": "DAO Description",
   "ImageScale": "Image scale 1:1",
@@ -105,7 +108,7 @@
   "FillDAODescription": "Please describe your DAO to let people know it better.Less than 1024 charactars.",
   "InitializeTemplate": "Initialize the template list",
   "initializationFailed": "Main contract initialization failed",
-  "chooseTemplate": "Please choose one template to create your DAO",
+  "chooseTemplate": "Please choose one template",
   "DAOAdmin": "DAO Admin",
   "FilltheName": "Fill the name",
   "FillAddress": "Fill the Address",
