--- a/public/locales/en-us.json
+++ b/public/locales/en-us.json
@@ -13,6 +13,7 @@
   "right": "SubDAO Labs © 2021 All Rights Reserved",
   "Website": "Website",
   "Exit": "Exit",
+  "logout": "Logout",
   "ExitMy": "Exit my DAO",
   "ExitCreate": "Exit create",
   "MyDAO": "My DAO",
