feat: update copy

--- a/public/locales/en-us.json
+++ b/public/locales/en-us.json
@@ -30,16 +30,16 @@
   "Contracts": "Contracts",
   "Voting": "Voting",
   "Vault": "Vault",
-  "Org": "Org",
+  "Org": "ORG",
   "More": "More",
   "Back": "Back",
   "Manage": "Manage",
-  "applyList": "Apply List",
+  "applyList": "Applicant List",
   "ExitDAO": "Exit the DAO",
   "Members": "Members",
   "Add": "Add",
   "InitializeORG": "Initialize the ORG page",
-  "triggerStatus": "Join the org directly？",
+  "triggerStatus": "Confirm to join？",
   "setFreeAddMember": "Set the way to add members",
   "RemoveModerator": "Remove a DAO moderator",
   "RemoveMember": "Remove a DAO member",
@@ -59,7 +59,7 @@
   "deposit": "Deposit",
   "withdraw": "Withdraw",
   "Createdeposit": "Create a new deposit",
-  "transferOrg": "transfer Org",
+  "transferOrg": "Transferring ORG",
   "send": "send",
   "fillAmount": "Please fill your amount",
   "Request": "Request",
@@ -93,39 +93,39 @@
   "CreateNewVote": "Create a new vote",
   "Decide": "Decide",
   "sureTrigger": "Are you sure trigger?",
-  "exitOrg": "Are you sure exit Org?",
+  "exitOrg": "Confirm to exit?",
   "Close": "Close",
   "Confirm": "Confirm",
   "Basicinformation": "Basic information",
   "TemplateSelection": "Template selection",
   "TemplateConfiguration": "Template configuration",
-  "think": "Let me think~",
+  "think": "Previous",
   "DAOImage": "DAO Logo",
-  "DAOName": "DAO name",
+  "DAOName": "DAO Name",
   "DAODescription": "DAO Description",
   "ImageScale": "Image scale 1:1",
-  "FillImage": "DAO's image Url ",
-  "FillName": "please enter DAO's name",
+  "FillImage": "DAO's image URL ",
+  "FillName": "Please enter DAO's name",
   "FillDAODescription": "Please describe your DAO to let people know it better.Less than 1024 charactars.",
   "InitializeTemplate": "Initialize the template list",
   "initializationFailed": "Main contract initialization failed",
   "chooseTemplate": "Please choose one template",
-  "DAOAdmin": "DAO Admin",
+  "DAOAdmin": "DAO Moderator",
   "FilltheName": "Fill the name",
   "FillAddress": "Fill the Address",
-  "AddAdmin": "Add Admin",
+  "AddAdmin": "Add Moderator",
   "Token": "Token",
   "FillToken": "Fill Token name",
   "FillSymbol": "Fill the symbol",
   "FillSupply": "Fill the total supply",
   "FillTokenAmount": "Fill the Token Amount",
   "AddToken": "Add Transfer Token",
-  "InstanceByTemplate": "Instance By Template",
-  "ListDao": "List Dao Instances By Owner",
+  "InstanceByTemplate": "Creating DAO from Template",
+  "ListDao": "List DAO Instances By Owner",
   "InitDAO": "Init DAO",
   "Uploadinformation": "Upload DAO's information",
   "TransferTokens": "Transfer Tokens",
-  "AddDaoModerators": "Add Dao Moderators",
+  "AddDaoModerators": "Add DAO Moderators",
   "ReceiverAddress": "Receiver's address",
   "UpdateAuthority": "Update Authority",
   "triggering": "Trigger transfer token",
