--- a/public/locales/en-us.json
+++ b/public/locales/en-us.json
@@ -58,12 +58,12 @@
   "sentto": "were successfully sent to",
   "deposit": "Deposit",
   "withdraw": "Withdraw",
-  "Createdeposit": "Create a new deposit",
+  "Createdeposit": "Depositing",
   "transferOrg": "Transferring ORG",
   "send": "send",
   "fillAmount": "Please fill your amount",
   "Request": "Request",
-  "Createwithdraw": "Create a new withdraw",
+  "Createwithdraw": "Withdraw",
   "fillAddress": "Please fill your receiver's address",
   "InitializeVote": "Initialize the vote page",
   "Newvoting": "New voting",
