--- a/public/locales/en-us.json
+++ b/public/locales/en-us.json
@@ -38,7 +38,7 @@
   "ExitDAO": "Exit the DAO",
   "Members": "Members",
   "Add": "Add",
-  "InitializeORG": "Initialize the ORG page",
+  "InitializeORG": "Loading",
   "triggerStatus": "Allow to join publicly?",
   "setFreeAddMember": "Set the way to add members",
   "RemoveModerator": "Remove a DAO moderator",
@@ -48,12 +48,11 @@
   "ApplyMember": "Apply a DAO Member",
   "ApplicationSent": "Application request sent",
   "ApproveSent": "Approvement sent",
-  "History": "History",
   "Amount": "Amount",
   "transferBtn": "Transfer",
   "transferOwnership": "Transfer Ownership",
   "Transfer": "Transfer from",
-  "InitializeVault": "Initialize the vault page",
+  "InitializeVault": "Loading",
   "sentfrom": "were successfully sent from",
   "sentto": "were successfully sent to",
   "deposit": "Deposit",
@@ -64,20 +63,21 @@
   "fillAmount": "Please fill your amount",
   "Request": "Request",
   "Createwithdraw": "Withdraw",
-  "fillAddress": "Please fill your receiver's address",
-  "InitializeVote": "Initialize the vote page",
+  "fillAddress": "New owner's address",
+  "InitializeVote": "Loading",
   "Newvoting": "New voting",
-  "PendingVoting": "Pending Voting List",
-  "ActiveVoting": "Active Voting List",
+  "ActiveVoting": "Voting in progress",
+  "PendingVoting": "Waiting to be triggered",
+  "History": "Finished",
   "Number": "Number",
   "Title": "Title",
   "Trigger": "Trigger",
   "View": "View",
-  "VotingNumber": "Voting Id",
-  "supportnumber": "Support require number",
-  "minnumber": "Min require number",
-  "VotingDescription": "Voting Description",
-  "Votingtime": "Voting time",
+  "VotingNumber": "ID",
+  "supportnumber": "Minimum number of supported votes",
+  "minnumber": "Minimum number of votes",
+  "VotingDescription": "Description",
+  "Votingtime": "End time",
   "Votingdurate": "Please fill how long the vote durate by seconds",
   "fillTitle": "Please fill the title",
   "Next": "Next",
@@ -107,7 +107,7 @@
   "FillImage": "DAO's image URL ",
   "FillName": "Please enter DAO's name",
   "FillDAODescription": "Please describe your DAO to let people know it better.Less than 1024 charactars.",
-  "InitializeTemplate": "Initialize the template list",
+  "InitializeTemplate": "Initializing template list",
   "initializationFailed": "Main contract initialization failed",
   "chooseTemplate": "Please choose one template",
   "DAOAdmin": "DAO Moderator",
