--- a/public/locales/en-us.json
+++ b/public/locales/en-us.json
@@ -11,7 +11,7 @@
   "noDao": "You are not a member of any DAO",
   "canCreateDao": "You can create your DAO!",
   "right": "SubDAO Labs © 2021 All Rights Reserved",
-  "Website": "Website",
+  "Website": "subdao",
   "Exit": "Exit",
   "logout": "Logout",
   "ExitMy": "Exit my DAO",
