--- a/public/locales/zh-cn.json
+++ b/public/locales/zh-cn.json
@@ -11,7 +11,7 @@
   "noDao": "您暂未加入任何 DAO",
   "canCreateDao": "可自行创建 DAO!",
   "right": "SubDAO Labs © 2021 版权所有",
-  "Website": "官网",
+  "Website": "subdao",
   "Exit": "退出",
   "MyDAO": "我的DAO",
   "InitializeHome": "初始化首页",
